--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
               <div class="input-field white z-depth-2">
                 <input id="transliterateTextarea" name="text" type="search" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons">close</i>
+                <i class="material-icons" style="margin-top: 7px">close</i>
               </div>
             </form>
           </div>
