--- a/templates/wiki_results.html
+++ b/templates/wiki_results.html
@@ -12,12 +12,10 @@
     <nav class="nav-extended">
     <div class="nav-wrapper orange darken-3 z-depth-2">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="left hide-on-med-and-down">
-        <li><a href="/heritage">भारतीय धरोहर</a></li>
-        <li class="active"><a href="#">समाचार</a></li>
+      <ul class="right hide-on-med-and-down">
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li class="active orange">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;मुख पृष्ठ</li>
+        <li class="active orange">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{search_text}}</li>
         <li><a href="#">विशेषताए</a></li>
         <li><a href="#">संपर्क</a></li>
       </ul>
@@ -57,26 +55,78 @@
 
     <body class="orange">
       <div class="container">
-        <!-- Page Content goes here -->
-        <br><br><br><br><br><br>
 
+        <!-- Page Content goes here -->
+        <br>
         <div class="row">
-          <div class="col s1 m1 l3"></div>
-          <div class="col s10 m10 l6">
-            <form action="{{url_for('index')}}" method="POST">
+          <div class="col s12 m12 l12">
+            <form action="{{url_for('heritage')}}" method="POST">
               <div class="input-field white z-depth-2">
-                <input id="transliterateTextarea" name="text" type="search" required>
+                <input id="transliterateTextarea" name="text" type="search" value="{{search_text}}" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                 <i class="material-icons" style="margin-top: 7px">close</i>
               </div>
             </form>
           </div>
-          <div class="col s1 m1 l3"></div>
         </div>
+
+        <!-- Results Content -->
+
+        <div class="row">
+          {% if results['hits']['hits'] | length > 0 %}
+          {% for item in results['hits']['hits'] %}
+          <div class="col s12 m6 l4">
+            <div class="card medium z-depth-2">
+              <div class="card-image waves-effect waves-block waves-light">
+                  <img src="{{ item['_source']['image_url'][0] }}">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">{{ item['_source']['title'] }}<i class="material-icons right">more_vert</i></span>
+                <p><a href="{{ item['_source']['url'] }}">अधिक पढ़ें</a></p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">{{ item['_source']['title'] }}<i class="material-icons right">close</i></span>
+                <p>{{ item['_source']['description'] }}</p>
+                <p><a href="{{ item['_source']['url'] }}">अधिक पढ़ें</a></p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          {% else %}
+          <div class="col s12 m12 l12 center">
+            <h2>ओए होए !!</h2>
+            <h4>लगता है आपकी खोज में कुछ मिला नहीं है।</h4>
+            <h4>आप किसी और खोजशब्द के साथ फिर खोज करें।</h4>
+          </div>
+        {% endif %}
+        </div>
+      </div>
+
+
+        <script src = "/static/jquery-3.1.1.min.js"></script>
+        <script>
+        $(document).ready(function(){
+          $("img").on("error", function(){
+            var img = $(this);
+            img.attr('src', '/static/no_image.png');
+          });
+        });
+        </script>
+
+        <style>
+        .img_item{
+          width: 100%;
+          height: 100%;
+          display: block;
+          margin-left: auto;
+          margin-right: 100%;
+        }
+        </style>
+
       </div>
       <!--Import jQuery before materialize.js-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-      <script src="static/main.js"></script>
+      <script type="text/javascript" src="static/main.js"></script>
       <!-- Compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     </body>
